remove warnings in AbstractRipper AbstractHTMLRipper DownloadFileThread Utils